--- a/component/Footer.html
+++ b/component/Footer.html
@@ -6,7 +6,7 @@
     <style>
         div{
             text-align: center;
-            font-size: 5px;
+            font-size: 15px;
 
         }
     </style>
@@ -14,7 +14,7 @@
 <body>
 <div id="app-footer">
     <div>
-        ICP备案号: <a href="https://beian.miit.gov.cn/" target="_blank">豫IPC备2023001902号</a>
+        ICP备案号: <a href="https://beian.miit.gov.cn/" target="_blank">豫ICP备2023001902号</a>
     </div>
 </div>
 </body>
